@@ -18,7 +18,7 @@ RUN yum install -y java \
     && chown jenkins:jenkins /opt/jenkins
 
 # installing test requirements
-RUN yum install -y libaio \
+RUN yum install -y libaio zip \
     && echo "options(repos = c(WLOG = 'http://wlog-cran.s3.amazonaws.com', CRAN = 'https://cran.rstudio.com/'), download.file.method = 'libcurl')" > /usr/local/lib64/R/etc/Rprofile.site
 
 WORKDIR /opt/jenkins
