@@ -29,17 +29,7 @@ pkg_build_docs <- function(pkg_name, pkg_path, rver, libpath) {
                     })
 
   ns_path <- file.path(pkg_path, "NAMESPACE")
-  if (file.exists(ns_path)) {
-    ns_lines <- trimws(readLines(ns_path))
-    ns_lines <- ns_lines[ns_lines != ""]
-    if (!any(grepl("^# Generated by roxygen", ns_lines[1]))) {
-      build_ns <- FALSE # not generated with roxygen
-    } else {
-      build_ns <- length(ns_lines[-1]) == 0 # do not rebuild if not empty: roxygen will do it
-    }
-  } else {
-    build_ns <- TRUE
-  }
+  build_ns <- !file.exists(ns_path) || any(grepl("^# Generated by roxygen", trimws(readLines(ns_path))[1]))
 
   if (!build_ns && length(removed) != 0 && !any(unlist(removed))) {
     # documentation building is not required
@@ -50,10 +40,18 @@ pkg_build_docs <- function(pkg_name, pkg_path, rver, libpath) {
     # put imports into NAMESPACE file as they will be needed to build
     # documentation properly.
     #
-    writeLines(c("# Generated by roxygen2: do not edit by hand", # for roxygen to regenerate it
-                 "",
-                 sprintf("import(%s)", get_package_desc_imports(pkg_path))),
-               con = ns_path)
+    desc_imps <- get_package_desc_imports(pkg_path)
+    nspace_imps <- get_package_nspace_imports(pkg_path)
+
+    ns_lines <- c("", sprintf("import(%s)", setdiff(desc_imps, nspace_imps)))
+    if (!file.exists(ns_path)) {
+      ns_lines <- c("# Generated by roxygen2: do not edit by hand", # for roxygen to regenerate it
+                    ns_lines)
+    }
+    ns_con <- file(ns_path, open = "at")
+    tryCatch({
+      writeLines(ns_lines, con = ns_con)
+    }, finally = { close(ns_con) })
   }
 
   doc_res <- run_rscript("devtools::document(%s)",
@@ -91,6 +89,26 @@ get_package_desc_imports <- function(pkg_path) {
 }
 
 #'
+#' Retrieves all package imports specified in NAMESPACE file.
+#'
+#' @param pkg_path path to the package. (type: character)
+#'
+#' @return character vector with all the package declared imports.
+#'
+#' @keywords internal
+#'
+get_package_nspace_imports <- function(pkg_path) {
+  ns_file <- file.path(pkg_path, "NAMESPACE")
+  stopifnot(file.exists(ns_file))
+
+  ns_lines <- readLines(ns_file)
+  ns_imports <- ns_lines[grepl("^\\s*import[(]\\s*[a-zA-Z0-9]+\\s*[)]\\s*$", ns_lines)]
+  ns_imports <- gsub("^\\s*import[()]\\s*([a-zA-Z0-9]+)\\s*[)]\\s*$", "\\1", ns_imports)
+  return(ns_imports)
+}
+
+
+#'
 #' Checks if package imports declaration is consistent with namespace.
 #' If imports declared but not present in NAMESPACE it gets updated.
 #'
@@ -107,26 +125,22 @@ get_package_desc_imports <- function(pkg_path) {
 #'
 validate_package_imports <- function(pkg_name, pkg_path) {
   desc_imports <- get_package_desc_imports(pkg_path)
-
-  ns_file <- file.path(pkg_path, "NAMESPACE")
-  stopifnot(file.exists(ns_file))
-
-  ns_lines <- readLines(ns_file)
-  ns_imports <- ns_lines[grepl("^\\s*import[(]\\s*[a-zA-Z0-9]+\\s*[)]\\s*$", ns_lines)]
-  ns_imports <- gsub("^\\s*import[()]\\s*([a-zA-Z0-9]+)\\s*[)]\\s*$", "\\1", ns_imports)
-
-  base_pkgs <- installed.packages(lib.loc = .Library, priority = "base")[, "Package"]
+  ns_imports <- get_package_nspace_imports(pkg_path)
 
   desc_not_ns <- setdiff(desc_imports, ns_imports)
-  desc_not_ns <- setdiff(desc_not_ns, base_pkgs)
   if (length(desc_not_ns) > 0) {
     pkg_logwarn("Updating NAMESPACE file of %s package to contain %s",
                 pkg_name, paste(desc_not_ns, collapse = ", "))
-    writeLines(c(ns_lines, sprintf("import(%s)", desc_not_ns)),
-               con = ns_file)
+    ns_con <- file(file.path(pkg_path, "NAMESPACE"),  open = "at")
+    tryCatch({
+      writeLines(c("", sprintf("import(%s)", desc_not_ns)),
+                 con = ns_con)
+    }, finally = { close(ns_con) })
   }
 
   ns_not_desc <- setdiff(ns_imports, desc_imports)
+
+  base_pkgs <- installed.packages(lib.loc = .Library, priority = "base")[, "Package"]
   ns_not_desc <- setdiff(ns_not_desc, base_pkgs)
   if (length(ns_not_desc) > 0) {
     pkg_logwarn("Imports present in NAMESPACE are not declared in DESCRIPTION of %s: %s",
